--- a/EmploApiSDK.csproj
+++ b/EmploApiSDK.csproj
@@ -50,7 +50,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client\ApiClient.cs" />
+    <Compile Include="Logic\EmployeeImport\AttributeMapping.cs" />
+    <Compile Include="Logic\EmployeeImport\AttributeMappingElement.cs" />
+    <Compile Include="Logic\EmployeeImport\AttributeMappingSection.cs" />
+    <Compile Include="Logic\EmployeeImport\BaseImportConfiguration.cs" />
     <Compile Include="Client\HttpClientProvider.cs" />
+    <Compile Include="Logic\EmployeeImport\ImportLogic.cs" />
+    <Compile Include="Logic\EmployeeImport\PropertyMapping.cs" />
     <Compile Include="Logger\BaseLogger.cs" />
     <Compile Include="Logger\ConsoleLogger.cs" />
     <Compile Include="Logger\ExceptionLoggingUtils.cs" />
