--- a/EmploApiSDK.csproj
+++ b/EmploApiSDK.csproj
@@ -40,17 +40,17 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.IdentityModel" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client\ApiClient.cs" />
+    <Compile Include="Logic\EmployeeImport\AttributeMapping.cs" />
+    <Compile Include="Logic\EmployeeImport\AttributeMappingElement.cs" />
+    <Compile Include="Logic\EmployeeImport\AttributeMappingSection.cs" />
+    <Compile Include="Logic\EmployeeImport\BaseImportConfiguration.cs" />
     <Compile Include="Client\HttpClientProvider.cs" />
+    <Compile Include="Logic\EmployeeImport\ImportLogic.cs" />
+    <Compile Include="Logic\EmployeeImport\PropertyMapping.cs" />
     <Compile Include="Logger\BaseLogger.cs" />
     <Compile Include="Logger\ConsoleLogger.cs" />
     <Compile Include="Logger\ExceptionLoggingUtils.cs" />
