--- a/packages.config
+++ b/packages.config
@@ -2,4 +2,8 @@
 <packages>
   <package id="IdentityModel" version="1.11.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
+  <package id="Serilog" version="2.6.0" targetFramework="net462" />
+  <package id="Serilog.Settings.AppSettings" version="2.1.2" targetFramework="net462" />
+  <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net462" />
+  <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net462" />
 </packages>
