- koniec implementacji seriloga - zabezpieczenie przed odpowiedzią 417 - niezbędne okresy oczekiwania i powtórzenia przy synchronizacji balansu urlopowego pracownika

--- a/EmploApiSDK.csproj
+++ b/EmploApiSDK.csproj
@@ -57,7 +57,7 @@
   <ItemGroup>
     <Compile Include="Client\ApiClient.cs" />
     <Compile Include="Logger\LogLevelEnum.cs" />
-    <Compile Include="Logger\SerilogRollingFileLogger.cs" />
+    <Compile Include="Logger\SerilogLogger.cs" />
     <Compile Include="Logic\EmployeeImport\AttributeMapping.cs" />
     <Compile Include="Logic\EmployeeImport\AttributeMappingElement.cs" />
     <Compile Include="Logic\EmployeeImport\AttributeMappingSection.cs" />
