--- a/app.config
+++ b/app.config
@@ -8,4 +8,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" /></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" /></startup>
+  <system.net>
+    <settings>
+      <servicePointManager expect100Continue="false" />
+    </settings>
+  </system.net>
+</configuration>
