- improved error logging - improved code flow exiting in case of a fatal API call error

--- a/EmploApiSDK.csproj
+++ b/EmploApiSDK.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client\ApiClient.cs" />
+    <Compile Include="Logger\EmploApiClientException.cs" />
     <Compile Include="Logger\LogLevelEnum.cs" />
     <Compile Include="Logger\SerilogLogger.cs" />
     <Compile Include="Logic\EmployeeImport\AttributeMapping.cs" />
