--- a/EmploApiSDK.csproj
+++ b/EmploApiSDK.csproj
@@ -58,12 +58,10 @@
   <ItemGroup>
     <Compile Include="ApiModels\Vacations\IntegratedVacationValidation\VacationValidationRequestModel.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationValidation\VacationValidationResponseModel.cs" />
-    <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\RequestModels\OperationTypeEnum.cs" />
-    <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\RequestModels\VacationCreatedWebhookModel.cs" />
-    <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\RequestModels\VacationEditedWebhookModel.cs" />
-    <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\RequestModels\VacationStatusChangedWebhookModel.cs" />
+    <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\RequestModels\WebhookEvent.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\RequestModels\VacationStatusEnum.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\RequestModels\VacationWebhookErrorRecoveryModel.cs" />
+    <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\RequestModels\VacationWebhookRequestModel.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\ResponseModels\CreatedObjectResponseEmploModel.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\ResponseModels\ErrorMessageResponseEmploModel.cs" />
     <Compile Include="Client\ApiClient.cs" />
