--- a/EmploApiSDK.csproj
+++ b/EmploApiSDK.csproj
@@ -56,6 +56,10 @@
     <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiModels\Vacations\ImportVacations\FinishImportVacationRequestModel.cs" />
+    <Compile Include="ApiModels\Vacations\ImportVacations\FinishImportVacationResponseModel.cs" />
+    <Compile Include="ApiModels\Vacations\ImportVacations\ImportVacationResponseModel.cs" />
+    <Compile Include="ApiModels\Vacations\ImportVacations\VacationDataRow.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationValidation\IntegratedVacationValidationExternalRequest.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationValidation\IntegratedVacationValidationResponse.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\RequestModels\WebhookEvent.cs" />
@@ -64,7 +68,10 @@
     <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\RequestModels\VacationWebhookRequestModel.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\ResponseModels\CreatedObjectResponseEmploModel.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\ResponseModels\ErrorMessageResponseEmploModel.cs" />
+    <Compile Include="ApiModels\Vacations\ImportVacations\ImportVacationRequestModel.cs" />
     <Compile Include="Client\ApiClient.cs" />
+    <Compile Include="Configuration\AppSettingsConfigurationProvider.cs" />
+    <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Logger\EmploApiClientException.cs" />
     <Compile Include="Logger\LogLevelEnum.cs" />
     <Compile Include="Logger\SerilogLogger.cs" />
@@ -88,6 +95,7 @@
     <Compile Include="ApiModels\Employees\ImportUsersResponseModel.cs" />
     <Compile Include="ApiModels\Employees\UpdateUnitResult.cs" />
     <Compile Include="ApiModels\Employees\UserDataRow.cs" />
+    <Compile Include="Logic\VacationImport\VacationImportLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
