Integrated vacation cancel logic

--- a/EmploApiSDK.csproj
+++ b/EmploApiSDK.csproj
@@ -65,6 +65,9 @@
     <Compile Include="ApiModels\Vacations\ImportVacations\FinishImportVacationResponseModel.cs" />
     <Compile Include="ApiModels\Vacations\ImportVacations\ImportVacationResponseModel.cs" />
     <Compile Include="ApiModels\Vacations\ImportVacations\VacationDataRow.cs" />
+    <Compile Include="ApiModels\Vacations\IntegratedVacationCancel\CancelIntegratedVactionsRequestModel.cs" />
+    <Compile Include="ApiModels\Vacations\IntegratedVacationCancel\CancelIntegratedVactionsResponseModel.cs" />
+    <Compile Include="ApiModels\Vacations\IntegratedVacationCancel\CancelIntegrationVacationStatusEnum.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationDelete\DeleteIntegratedVactionsRequestModel.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationDelete\DeleteIntegratedVactionsResponseModel.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationValidation\IntegratedVacationValidationExternalRequest.cs" />
@@ -103,6 +106,7 @@
     <Compile Include="ApiModels\Employees\ImportUsersResponseModel.cs" />
     <Compile Include="ApiModels\Employees\UpdateUnitResult.cs" />
     <Compile Include="ApiModels\Employees\UserDataRow.cs" />
+    <Compile Include="Logic\IntegratedVacationCancel\IntegratedVacationCancelLogic.cs" />
     <Compile Include="Logic\IntegratedVacationDelete\IntegratedVacationDeleteLogic.cs" />
     <Compile Include="Logic\VacationActions\VacationsLogic.cs" />
     <Compile Include="Logic\VacationImport\VacationImportLogic.cs" />
