--- a/EmploApiSDK.csproj
+++ b/EmploApiSDK.csproj
@@ -70,6 +70,7 @@
     <Compile Include="ApiModels\Vacations\IntegratedVacationCancel\CancelIntegrationVacationStatusEnum.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationDelete\DeleteIntegratedVactionsRequestModel.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationDelete\DeleteIntegratedVactionsResponseModel.cs" />
+    <Compile Include="ApiModels\Vacations\IntegratedVacationLock\LockIntegratedVactionsResponseModel.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationValidation\IntegratedVacationValidationExternalRequest.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationValidation\IntegratedVacationValidationResponse.cs" />
     <Compile Include="ApiModels\Vacations\IntegratedVacationWebhooks\RequestModels\WebhookEvent.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="ApiModels\Employees\UserDataRow.cs" />
     <Compile Include="Logic\IntegratedVacationCancel\IntegratedVacationCancelLogic.cs" />
     <Compile Include="Logic\IntegratedVacationDelete\IntegratedVacationDeleteLogic.cs" />
+    <Compile Include="Logic\IntegratedVacationLock\IntegratedVacationLockLogic.cs" />
     <Compile Include="Logic\VacationActions\VacationsLogic.cs" />
     <Compile Include="Logic\VacationImport\VacationImportLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
