--- a/EmploApiSDK.csproj
+++ b/EmploApiSDK.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ApiModels\Common\ImportStatusCode.cs" />
     <Compile Include="ApiModels\Common\ImportValidationSummaryRow.cs" />
     <Compile Include="ApiModels\Employees\DismissBlockedUsersResponseModel.cs" />
+    <Compile Include="ApiModels\Employees\ExternalSystemIdModel.cs" />
     <Compile Include="ApiModels\Employees\PermanentRemoveBlockedUsersResponseModel.cs" />
     <Compile Include="ApiModels\Vacations\Actions\VacationCommentResponse.cs" />
     <Compile Include="ApiModels\Vacations\Actions\VacationCommentRequest.cs" />
